tests/errors/string/unknown_escape_is_parse.sim
fn f() {
  s: [u8; 1];
  entry:
    s = b"\q";
    return
}
